Add material to pre-analysis chapter and build framework

--- a/visualization_techniques.Rmd
+++ b/visualization_techniques.Rmd
@@ -50,9 +50,11 @@ tse <- addPerCellQC(tse)
 tse <- addPerFeatureQC(tse)
 ```
 
-## Accessing row and column data
+## Pre-analysis exploration
 
-`SCE` and `TSE` objects contain multiple layers of information in the form of rows, columns and meta data. The `scater` package supports in accessing, modifying and visualizing the meta data related to features as well as samples.
+### Accessing row and column data
+
+`SCE` and `TSE` objects contain multiple layers of information in the form of rows, columns and meta data. The `scater` package supports in accessing, modifying and graphing the meta data related to features as well as samples.
 
 ```{r}
 # list row meta data
@@ -64,11 +66,11 @@ names(colData(tse))
 Such meta data can be directly plotted with the functions `plotRowData` and `plotColData`.
 
 ```{r, warning = FALSE}
-# plot QC Mean against Sample ID, colur-labeled by Sample Type
+# plot QC Mean against Species
 plotRowData(tse, "mean", "Species") +
   theme(axis.text.x = element_blank()) +
   labs(x = "Species", y = "QC Mean")
-
+# plot QC Sum against Sample ID, colour-labeled by Sample Type
 plotColData(tse, "sum", "X.SampleID", colour_by = "SampleType") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   labs(x = "Sample ID", y = "QC Sum")
@@ -77,8 +79,9 @@ plotColData(tse, "sum", "X.SampleID", colour_by = "SampleType") +
 Alternatively, they can be converted to a `data.frame` object and passed to `ggplot`.
 
 ```{r}
+# store colData into a data frame
 coldata <- as.data.frame(colData(tse))
-
+# plot Number of Samples against Sampling Site
 ggplot(coldata, aes(x = SampleType)) +
   geom_bar(width = 0.5) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
@@ -86,7 +89,27 @@ ggplot(coldata, aes(x = SampleType)) +
        y = "Number of Samples")
 ```
 
-Further methods of usage and examples can be found in the chapters \@ref(qc) and \@ref(richness).
+Further methods of usage can be found in the chapters \@ref(qc) and \@ref(richness) and in a few [external tutorials](https://github.com/davismcc/scater_tutorials_open_data) with open data.
+
+### Viewing abundance and prevalence patterns
+
+Prior-to-analysis exploration may involve questions such as how microorganisms are distributed across samples (abundance) and what microorganisms are present in most of the samples (prevalence). The information on abundance and prevalence can be summarized into a **jitter** or **density plot** and a **tree**, respectively, with the `miaViz` package.
+
+Specifically, the functions `plotAbundance`, `plotAbundanceDensity` and `plotRowTree` are used, and examples on their applications are discussed throughout chapter \@ref(quality-control).
+
+## Diversity estimation
+
+Visualization techniques for alpha and beta diversity greatly differ from one another.
+
+### Alpha diversity with violin and box plots
+
+The several indices available for the evaluation of alpha diversity often return slightly divergent estimates, which can be visually compared with a multiple violin or box plot.
+
+### Beta diversity with regression and coordination plots
+
+## Statistical analysis
+
+### community composition, biclustering and multi-assay analysis with heat maps
 
 ## Session Info {-}
 
