Proceed with section on diversity

--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -1,4 +1,4 @@
-# Community diversity
+# Community diversity {#community-diversity}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -99,7 +99,6 @@ plotColData(tse,
 
 ### Diversity  
 
-**Non-Phylogenetic measures**  
 The main function, `estimateDiversity`, calculates the selected
 diversity index based on the selected assay data.  
 
@@ -147,7 +146,7 @@ ggplot(df, aes(x = SampleType, y = shannon)) +
   theme(text = element_text(size = 10))
 ```
 
-### Faith phylogenetic diversity
+### Faith phylogenetic diversity {#faith-diversity}
 
 The Faith index is returned by the function `estimateFaith`.
 
