--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 ```
 
 
-# Community similarity
+# Community similarity {#community-similarity}
 
 Where alpha diversity focuses on community variation within a
 community (sample), beta diversity quantifies (dis-)similarites
