Finalise section on alpha diversity

--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -97,7 +97,7 @@ plotColData(tse,
 
 ```
 
-### Diversity  
+### Diversity {#estimate-diversity}  
 
 The main function, `estimateDiversity`, calculates the selected
 diversity index based on the selected assay data.  
