--- a/visualization_techniques.Rmd
+++ b/visualization_techniques.Rmd
@@ -124,24 +124,29 @@ As a conclusion, visualization techniques for alpha and beta diversity significa
 
 ### Alpha diversity with scatter, violin and box plots
 
+The basic method to visualize the diversity values assigned to the different samples in a `TSE` object includes the following, where each data point represents one sample:
+
 ```{r}
+# plot shannon diversity index, colour-labeled by Sample Type
 plotColData(tse, "shannon", colour_by = "SampleType")
 ```
 
-The several indices available for the evaluation of alpha diversity often return slightly divergent estimates, which can be visually compared with a multiple violin or box plot. For this purpose, `plotColData` (for violin plots) or `ggplot` (for box plots) are recursively applied to a number of diversity indices with the function `lapply` and the multi-panel plotting functionality of the `patchwork` package is then exploited.
+The several indices available for the evaluation of alpha diversity often return slightly divergent results, which can be visually compared with a multiple violin or box plot. For this purpose, `plotColData` (for violin plots) or `ggplot` (for box plots) are recursively applied to a number of diversity indices with the function `lapply` and the multi-panel plotting functionality of the `patchwork` package is then exploited.
 
 ```{r}
+# store colData into a data frame
 coldata <- as.data.frame(colData(tse))
-
+# generate plots for shannon and faith indices
+# and store them into a list
 plots <- lapply(c("shannon", "faith"),
                 function(i) ggplot(coldata, aes_string(y = i)) +
                   geom_boxplot() +
                   theme(axis.text.x = element_blank(),
                         axis.ticks.x = element_blank()))
-
+# combine plots with patchwork
 plots[[1]] + plots[[2]]
 ```
-The analogous output in the form of a violin plot is obtained in chapter \@ref(faith-diversity).
+The analogous output in the form of a violin plot is obtained in chapter \@ref(faith-diversity). In addition, box plots that group samples according to certain information, such as origin, sex, age and health condition, can be labeled with p-values for significant differences with the package `ggsignif` package, as shown in chapter \@ref(estimate-diversity).
 
 ### Beta diversity with Shepard and coordination plots
 
