--- a/visualization_techniques.Rmd
+++ b/visualization_techniques.Rmd
@@ -160,7 +160,7 @@ The analogous output in the form of a violin plot is obtained in chapter \@ref(f
 
 ### Beta diversity with Shepard and coordination plots
 
-The `scater` package offers the general function `plotReducedDim`, which is able to produce plots from the following coordination methods:
+The `scater` package offers the general function `plotReducedDim`. In its basic form, it takes a `TSE` object and the results on sample similarity stored in the same object, which can be evaluated with the following coordination methods:
 
 * `runMDS`
 * `runNMDS`
@@ -169,23 +169,34 @@ The `scater` package offers the general function `plotReducedDim`, which is able
 * `runUMAP`
 
 ```{r}
-p1 <- plotReducedDim(tse, "NMDS", colour_by = "SampleType")
+# plot results of a 2-component NMDS on tse,
+# coloured-scaled by shannon diversity index
+plotReducedDim(tse, "NMDS", colour_by = "shannon")
 ```
 
 Multiple combinations of coordinates or dimensions can also be integrated into a multi-panel arrangement.
 
 ```{r}
-p2 <- plotReducedDim(tse, "MDS", ncomponents = c(1:3), colour_by = "SampleType")
+# plot results of a 3-component MDS on tse,
+# coloured-scaled by faith diversity index
+plotReducedDim(tse, "MDS", ncomponents = c(1:3), colour_by = "faith")
 ```
 
-Similarly to iterating `plotColData` over indices of alpha diversity, `lapply` and `patchwork` can be used in combination to recursively apply `plotReducedDim` and visually compare results among various coordination methods.
+Similarly to iterating `plotColData` over indices of alpha diversity, `lapply` can be used in combination with `patchwork` to recursively apply `plotReducedDim` and visually compare results among various coordination methods.
 
 ```{r}
+# generate plots for MDS and NMDS methods
+# and store them into a list
 plots <- lapply(c("MDS", "NMDS"),
                 plotReducedDim,
-                object = tse)
-plots[[1]] + plots[[2]]
+                object = tse,
+                colour_by = "shannon")
+# combine plots with patchwork
+plots[[1]] + plots[[2]] +
+  plot_layout(guides = "collect")
 ```
+
+For similar examples, readers are referred to chapter \@ref(community-similarity). Further material on the graphic capabilities of `patchwork` is available in its [official package tutorial](https://patchwork.data-imaginist.com/articles/patchwork.html).
 
 ## Statistical analysis
 
