Proceed with section on heat maps

--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -15,7 +15,7 @@ data("GlobalPatterns", package="mia")
 tse <- GlobalPatterns
 ```
 
-## Visualizing taxonomic composition
+## Visualizing taxonomic composition {#visual-composition}
 
 ### Composition barplot
 
@@ -83,339 +83,6 @@ ggplot(df, aes(x = SampleID, y = FeatureID, fill = clr_z)) +
         axis.text.x = element_text(angle=45, hjust=1),
         legend.key.size = unit(1, "cm")) +
   labs(x = "Samples", y = "Taxa")
-```
-
-_pheatmap_ is a package that provides methods to plot clustered heatmaps. 
-
-```{r pheatmap1}
-if(!require(pheatmap)){
-  install.packages("pheatmap")
-  library(pheatmap)
-}
-
-# Takes subset: only samples from feces, skin, or tongue
-tse_phylum_subset <- tse_phylum[ , colData(tse_phylum)$SampleType %in% c("Feces", "Skin", "Tongue") ]
-
-# Does clr-transformation
-tse_phylum_subset <- transformSamples(tse_phylum_subset, method = "clr", pseudocount = 1)
-# Does z-transformation
-tse_phylum_subset <- transformFeatures(tse_phylum_subset, abund_values = "clr", 
-                                       method = "z", name = "clr_z")
-
-# Get n most abundant taxa, and subsets the data by them
-top_taxa <- getTopTaxa(tse_phylum_subset, top = 20)
-tse_phylum_subset <- tse_phylum_subset[top_taxa, ]
-
-# Gets the assay table
-mat <- assay(tse_phylum_subset, "clr_z")
-
-# Creates the heatmap
-pheatmap(mat)
-```
-
-We can create clusters by hierarchical clustering and add them to the plot.
-
-```{r pheatmap2}
-if(!require(ape)){
-    install.packages("ape")
-    library(ape)
-}
-
-# Hierarchical clustering
-taxa_hclust <- hclust(dist(mat), method = "complete")
-
-# Creates a phylogenetic tree
-taxa_tree <- as.phylo(taxa_hclust)
-```
-
-```{r pheatmap3}
-if(!require(ggtree)){
-    install.packages("ggtree")
-    library(ggtree)
-}
-
-# Plot taxa tree
-taxa_tree <- ggtree(taxa_tree) + 
-  theme(plot.margin=margin(0,0,0,0)) # removes margins
-
-# Get order of taxa in plot
-taxa_ordered <- get_taxa_name(taxa_tree)
-
-taxa_tree
-```
-
-Based on phylo tree, we decide to create three clusters. 
-
-```{r pheatmap4}
-# Creates clusters
-taxa_clusters <- cutree(tree = taxa_hclust, k = 3)
-
-# Converts into data frame
-taxa_clusters <- data.frame(clusters = taxa_clusters)
-taxa_clusters$clusters <- factor(taxa_clusters$clusters)
-
-# Order data so that it's same as in phylo tree
-taxa_clusters <- taxa_clusters[taxa_ordered, , drop = FALSE] 
-
-# Prints taxa and their clusters
-taxa_clusters
-```
-
-```{r pheatmap5}
-# Adds information to rowData
-rowData(tse_phylum_subset)$clusters <- taxa_clusters[order(match(rownames(taxa_clusters), 
-                                                                 rownames(tse_phylum_subset))), ]
-
-# Prints taxa and their clusters
-rowData(tse_phylum_subset)$clusters
-```
-
-```{r pheatmap6}
-# Hierarchical clustering
-sample_hclust <- hclust(dist(t(mat)), method = "complete")
-
-# Creates a phylogenetic tree
-sample_tree <- as.phylo(sample_hclust)
-
-# Plot sample tree
-sample_tree <- ggtree(sample_tree) + layout_dendrogram() + 
-  theme(plot.margin=margin(0,0,0,0)) # removes margins
-
-# Get order of samples in plot
-samples_ordered <- rev(get_taxa_name(sample_tree))
-
-sample_tree
-```
-
-```{r pheatmap7}
-# Creates clusters
-sample_clusters <- factor(cutree(tree = sample_hclust, k = 3))
-
-# Converts into data frame
-sample_data <- data.frame(clusters = sample_clusters)
-
-# Order data so that it's same as in phylo tree
-sample_data <- sample_data[samples_ordered, , drop = FALSE] 
-
-# Order data based on 
-tse_phylum_subset <- tse_phylum_subset[ , rownames(sample_data)]
-
-# Add sample type data
-sample_data$sample_types <- unfactor(colData(tse_phylum_subset)$SampleType)
-
-sample_data
-```
-
-Now we can create heatmap with additional annotations.
-
-```{r pheatmap8}
-# Determines the scaling of colorss
-# Scale colors
-breaks <- seq(-ceiling(max(abs(mat))), ceiling(max(abs(mat))), 
-              length.out = ifelse( max(abs(mat))>5, 2*ceiling(max(abs(mat))), 10 ) )
-colors <- colorRampPalette(c("darkblue", "blue", "white", "red", "darkred"))(length(breaks)-1)
-
-pheatmap(mat, annotation_row = taxa_clusters, 
-         annotation_col = sample_data,
-         breaks = breaks,
-         color = colors)
-```
-
-In addition to _pheatmap_ package, there are also other packages that
-provide functions for more complex heatmaps, such as [_iheatmapr_](https://docs.ropensci.org/iheatmapr/articles/full_vignettes/iheatmapr.html)
-and 
-[ComplexHeatmap](https://academic.oup.com/bioinformatics/article/32/18/2847/1743594?login=true).
-
-[sechm](http://www.bioconductor.org/packages/release/bioc/vignettes/sechm/inst/doc/sechm.html)
-package provides wrapper for _ComplexHeatmap_.
-
-```{r sechm}
-if(!require(sechm)){
-  BiocManager::install("sechm")
-  library(sechm)
-}
-# Stores annotation colros to metadata
-metadata(tse_phylum_subset)$anno_colors$SampleType <- c(Feces = "blue", 
-                                                        Skin = "red", 
-                                                        Tongue = "gray")
-
-# Create a plot
-sechm(tse_phylum_subset, 
-      genes = rownames(tse_phylum_subset), 
-      assayName = "clr", 
-      do.scale = TRUE, 
-      top_annotation = c("SampleType"), 
-      gaps_at = "SampleType",
-      cluster_cols = TRUE, cluster_rows = TRUE)
-```
-
-It is also possible to create similar heatmap by just using _ggplot2_.
-
-```{r more_complex_heatmap1}
-# Add feature names to column as a factor
-taxa_clusters$Feature <- rownames(taxa_clusters)
-taxa_clusters$Feature <- factor(taxa_clusters$Feature, levels = taxa_clusters$Feature)
-
-# Create annotation plot
-row_annotation <- ggplot(taxa_clusters) + 
-  geom_tile(aes(x = NA, y = Feature, fill = clusters)) + coord_equal(ratio = 1) +
-  theme(
-        axis.text.x=element_blank(),
-        axis.text.y=element_blank(),
-        axis.ticks.y=element_blank(),
-        axis.title.y=element_blank(),
-        axis.title.x = element_text(angle = 90, vjust = 0.5, hjust=1),
-        plot.margin=margin(0,0,0,0),
-        ) +
-      labs(fill = "Clusters", x = "Clusters")
-
-row_annotation
-```
-
-```{r more_complex_heatmap2}
-# Add sample names to one of the columns
-sample_data$sample <- factor(rownames(sample_data), levels = rownames(sample_data))
-
-# Create annotation plot
-sample_types_annotation <- ggplot(sample_data) + scale_y_discrete(position = "right", expand = c(0,0)) +
-  geom_tile(aes(y = NA, x = sample, fill = sample_types)) + coord_equal(ratio = 1) +
-  theme(
-        axis.text.x=element_blank(),
-        axis.text.y=element_blank(),
-        axis.title.x=element_blank(),
-        axis.ticks.x=element_blank(),
-        plot.margin=margin(0,0,0,0),
-        axis.title.y.right = element_text(angle=0, vjust = 0.5)
-        ) +
-      labs(fill = "Sample types", y = "Sample types")
-
-sample_types_annotation
-
-```
-
-```{r more_complex_heatmap3}
-# Create annotation plot
-sample_clusters_annotation <- ggplot(sample_data) + scale_y_discrete(position = "right", expand = c(0,0)) +
-  geom_tile(aes(y = NA, x = sample, fill = clusters)) + coord_equal(ratio = 1) +
-  theme(
-        axis.text.x=element_blank(),
-        axis.text.y=element_blank(),
-        axis.title.x=element_blank(),
-        axis.ticks.x=element_blank(),
-        plot.margin=margin(0,0,0,0),
-        axis.title.y.right = element_text(angle=0, vjust = 0.5)
-        ) +
-      labs(fill = "Clusters", y = "Clusters")
-
-sample_clusters_annotation
-
-```
-
-```{r more_complex_heatmap4}
-if(!require(reshape2)){
-    install.packages("reshape2")
-    library(reshape2)
-}
-# Order data based on clusters and sample types
-mat <- mat[unfactor(taxa_clusters$Feature), unfactor(sample_data$sample)]
-
-# ggplot requires data in melted format
-melted_mat <- melt(mat)
-colnames(melted_mat) <- c("Taxa", "Sample", "clr_z")
-
-# Determines the scaling of colorss
-maxval <- round(max(abs(melted_mat$clr_z)))
-limits <- c(-maxval, maxval)
-breaks <- seq(from = min(limits), to = max(limits), by = 0.5)
-colours <- c("darkblue", "blue", "white", "red", "darkred")
-
-heatmap <- ggplot(melted_mat) + 
-  geom_tile(aes(x = Sample, y = Taxa, fill = clr_z)) +
-  theme(
-    axis.title.y=element_blank(),
-    axis.title.x=element_blank(),
-    axis.ticks.y=element_blank(),
-    axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1),
-    
-    plot.margin=margin(0,0,0,0), # removes margins
-    legend.key.height= unit(1, 'cm')
-    ) +
-  scale_fill_gradientn(name = "CLR + Z transform", 
-                       breaks = breaks, 
-                       limits = limits, 
-                       colours = colours) + 
-  scale_y_discrete(position = "right")
-
-heatmap
-```
-
-
-```{r more_complex_heatmap5}
-if(!require(patchwork)){
-    install.packages("patchwork")
-    library(patchwork)
-}
-
-# Create layout
-design <- c(
-  area(3, 1, 4, 1),
-  area(1, 2, 1, 3),
-  area(2, 2, 2, 3),
-  area(3, 2, 4, 3)
-)
-
-plot(design)
-```
-
-```{r more_complex_heatmap6, fig.width=10, fig.height=8}
-# Combine plots
-plot <- row_annotation + sample_clusters_annotation + sample_types_annotation + heatmap  +
-    plot_layout(design = design, guides = "collect", # Specify layout, collect legends
-                
-                # Adjust widths and heights to align plots.
-                # When annotation plot is larger, it might not fit into its column/row.
-                # Then you need to make column/row larger.
-                
-                # Relative widths and heights of each column and row:
-                # Currently, the width of the first column is 15 % and the height of
-                # first two rows are 30 % the size of others
-                
-                # To get this work most of the times, you can adjust all sizes to be 1, i.e. equal, 
-                # but then the gaps between plots are larger.
-                widths = c(0.15, 1, 1),
-                heights = c(0.3, 0.3, 1, 1))
-
-plot
-
-```
-
-```{r more_complex_heatmap7}
-# Create layout
-design <- c(
-  area(4, 1, 5, 1),
-  area(4, 2, 5, 2),
-  area(1, 3, 1, 4),
-  area(2, 3, 2, 4),
-  area(3, 3, 3, 4),
-  area(4, 3, 5, 4)
-)
-
-plot(design)
-```
-
-```{r more_complex_heatmap8, fig.width=10, fig.height=8}
-# Combine plots
-plot <- taxa_tree + 
-  row_annotation +
-  sample_tree + 
-  sample_clusters_annotation +
-  sample_types_annotation +
-  heatmap +
-    plot_layout(design = design, guides = "collect", # Specify layout, collect legends
-                widths = c(0.2, 0.15, 1, 1, 1),
-                heights = c(0.1, 0.15, 0.15, 0.25, 1, 1))
-
-plot
 ```
 
 # Community typing {#community-typing}
