Finalise section on heat maps 2

--- a/visualization_techniques.Rmd
+++ b/visualization_techniques.Rmd
@@ -382,7 +382,7 @@ sechm(tse_phylum_subset,
 
 It is also possible to create an analogous heat map by just using the `ggplot2` package. However, a relatively long code is required to generate an identical output.
 
-```{r more_complex_heatmap1}
+```{r more_complex_heatmap}
 # Add feature names to column as a factor
 taxa_clusters$Feature <- rownames(taxa_clusters)
 taxa_clusters$Feature <- factor(taxa_clusters$Feature, levels = taxa_clusters$Feature)
@@ -402,9 +402,7 @@ row_annotation <- ggplot(taxa_clusters) +
 
 # to view the notation, run
 # row_annotation
-```
 
-```{r more_complex_heatmap2}
 # Add sample names to one of the columns
 sample_data$sample <- factor(rownames(sample_data), levels = rownames(sample_data))
 
@@ -422,9 +420,7 @@ sample_types_annotation <- ggplot(sample_data) + scale_y_discrete(position = "ri
       labs(fill = "Sample types", y = "Sample types")
 # to view the notation, run
 # sample_types_annotation
-```
 
-```{r more_complex_heatmap3}
 # Create annotation plot
 sample_clusters_annotation <- ggplot(sample_data) + scale_y_discrete(position = "right", expand = c(0,0)) +
   geom_tile(aes(y = NA, x = sample, fill = clusters)) + coord_equal(ratio = 1) +
@@ -439,9 +435,7 @@ sample_clusters_annotation <- ggplot(sample_data) + scale_y_discrete(position = 
       labs(fill = "Clusters", y = "Clusters")
 # to view the notation, run
 # sample_clusters_annotation
-```
 
-```{r more_complex_heatmap4}
 # Order data based on clusters and sample types
 mat <- mat[unfactor(taxa_clusters$Feature), unfactor(sample_data$sample)]
 
@@ -475,7 +469,7 @@ heatmap <- ggplot(melted_mat) +
 heatmap
 ```
 
-```{r more_complex_heatmap5}
+```{r more_complex_heatmap2, fig.width = 10, fig.height = 8}
 # Create layout
 design <- c(
   area(3, 1, 4, 1),
@@ -485,9 +479,7 @@ design <- c(
 )
 # to view the design, run
 # plot(design)
-```
 
-```{r more_complex_heatmap6, fig.width=10, fig.height=8}
 # Combine plots
 plot <- row_annotation + sample_clusters_annotation + sample_types_annotation + heatmap  +
     plot_layout(design = design, guides = "collect", # Specify layout, collect legends
@@ -508,7 +500,7 @@ plot <- row_annotation + sample_clusters_annotation + sample_types_annotation + 
 # plot
 ```
 
-```{r more_complex_heatmap7}
+```{r more_complex_heatmap3, fig.width = 10, fig.height = 8}
 # Create layout
 design <- c(
   area(4, 1, 5, 1),
@@ -521,9 +513,7 @@ design <- c(
 
 # to view the design, run
 # plot(design)
-```
 
-```{r more_complex_heatmap8, fig.width=10, fig.height=8}
 # Combine plots
 plot <- taxa_tree + 
   row_annotation +
