--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -24,8 +24,7 @@ solutions to apply biclustering to them.
 Biclusters can be visualized using heatmap or boxplot, for instance. For checking purposes, 
 also scatter plot might be valid choice. 
 
-Check more ideas for heatmaps from 
-[here](https://microbiome.github.io/OMA/microbiome-community.html#composition-heatmap).
+Check more ideas for heatmaps from chapters \@ref(viz-chapter) and \@ref(microbiome-community.
 
 ## Taxa vs samples
 
