Fix cropped 3d image and others

--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -86,12 +86,12 @@ head(colData(tse)$observed)
 This allows access to the values to be analyzed directly from the `colData`, for example
 by plotting them using `plotColData` from the _`scater`_ package [@R-scater].
 
-```{r plot-div-shannon, message=FALSE, fig.cap="Shannon diversity estimates plotted grouped by sample type."}
+```{r plot-div-shannon, message=FALSE, fig.cap="Shannon diversity estimates plotted grouped by sample type with colour-labeled barcode."}
 library(scater)
 plotColData(tse, 
             "observed", 
             "SampleType", 
-            colour_by = "SampleType") +
+            colour_by = "Final_Barcode") +
     theme(axis.text.x = element_text(angle=45,hjust=1)) + 
   ylab(expression(Richness[Observed]))
 
@@ -164,8 +164,9 @@ Below a visual comparison between shannon and faith indices is shown with a viol
 ```{r phylo-div-2}
 plots <- lapply(c("shannon", "faith"),
                 plotColData,
-                object = tse)
-plots[[1]] + plots[[2]]
+                object = tse, colour_by = "SampleType")
+plots[[1]] + plots[[2]] +
+  plot_layout(guides = "collect")
 ```
  
 Alternatively, the phylogenetic diversity can be calculated by `mia::estimateDiversity`. This is a faster re-implementation of   
@@ -221,7 +222,7 @@ head(colData(tse)$log_modulo_skewness)
 
 A plot comparing all the diversity measures calculated above and stored in `colData` can then be constructed directly.
 
-```{r plot-all-diversities}
+```{r plot-all-diversities, fig.width = 6.5}
 plots <- lapply(c("observed", "shannon", "simpson", "relative", "faith", "log_modulo_skewness"),
                 plotColData,
                 object = tse,
