--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -1,8 +1,3 @@
----
-title: ""
-output: html_notebook
----
-
 # Visualization {#viz-chapter}
 
 ```{r setup, echo=FALSE, results="asis"}
@@ -25,17 +20,16 @@ This chapter introduces the reader to a number of visualization techniques found
 
 The toolkit which provides the essential plotting functionality includes the following packages:
 
-* `patchwork`, `cowplot`, `ggpubr` and `gridExtra`: plot layout and multi-panel plotting
-* `miaViz`: specific visualization tools for `TreeSummaizedExperiment` objects
-* `scater`: specific visualization tools for `SingleCellExperiment` objects
-* `ggplot2`, `pheatmap`, `ggtree`, `sechm`: composition heat maps
-* `ANCOMBC`, `ALDEx2` and `map2`: visual differential abundance
-* `fido` and `pibble`: tree-based methods for differential abundance
-* `plotly`: animated and 3D plotting
+* _patchwork_, _cowplot_, _ggpubr_ and _gridExtra_: plot layout and multi-panel plotting
+* _miaViz_: specific visualization tools for `TreeSummaizedExperiment` objects
+* _scater_: specific visualization tools for `SingleCellExperiment` objects
+* _ggplot2_, _pheatmap_, _ggtree_, _sechm_: composition heat maps
+* _ANCOMBC_, _ALDEx2_ and _Maaslin2_: visual differential abundance
+* _fido_: tree-based methods for differential abundance
+* _plotly_: animated and 3D plotting
 
-For systematic and extensive tutorials on the visual tools available in `phyloseq` and `mia`, readers can refer to the following material:
+For systematic and extensive tutorials on the visual tools available in _mia_, readers can refer to the following material:
 
-* [phyloseq tutorials](http://joey711.github.io/phyloseq/tutorials-index)
 * [microbiome tutorials](https://microbiome.github.io/tutorials/)
 
 ```{r, include = FALSE}
@@ -59,7 +53,7 @@ tse <- GlobalPatterns
 
 ### Accessing row and column data
 
-`SCE` and `TSE` objects contain multiple layers of information in the form of rows, columns and meta data. The `scater` package supports in accessing, modifying and graphing the meta data related to features as well as samples.
+`SCE` and `TSE` objects contain multiple layers of information in the form of rows, columns and meta data. The _scater_ package supports in accessing, modifying and graphing the meta data related to features as well as samples.
 
 ```{r}
 # list row meta data
@@ -101,7 +95,7 @@ Further methods of application can be found in the chapters \@ref(qc) and \@ref(
 
 ### Viewing abundance and prevalence patterns
 
-Prior-to-analysis exploration may involve questions such as how microorganisms are distributed across samples (abundance) and what microorganisms are present in most of the samples (prevalence). The information on abundance and prevalence can be summarized into a **jitter** or **density plot** and a **tree**, respectively, with the `miaViz` package.
+Prior-to-analysis exploration may involve questions such as how microorganisms are distributed across samples (abundance) and what microorganisms are present in most of the samples (prevalence). The information on abundance and prevalence can be summarized into a **jitter** or **density plot** and a **tree**, respectively, with the _miaViz_ package.
 
 Specifically, the functions `plotAbundance`, `plotAbundanceDensity` and `plotRowTree` are used, and examples on their usage are discussed throughout chapter \@ref(quality-control).
 
@@ -135,7 +129,7 @@ tse <- mia::estimateDiversity(tse,
 plotColData(tse, "shannon", colour_by = "SampleType")
 ```
 
-The several indices available for the evaluation of alpha diversity often return slightly divergent results, which can be visually compared with a multiple violin or box plot. For this purpose, `plotColData` (for violin plots) or `ggplot` (for box plots) are recursively applied to a number of diversity indices with the function `lapply` and the multi-panel plotting functionality of the `patchwork` package is then exploited.
+The several indices available for the evaluation of alpha diversity often return slightly divergent results, which can be visually compared with a multiple violin or box plot. For this purpose, `plotColData` (for violin plots) or `ggplot` (for box plots) are recursively applied to a number of diversity indices with the function `lapply` and the multi-panel plotting functionality of the _patchwork_ package is then exploited.
 
 ```{r}
 # estimate faith diversity index
@@ -153,17 +147,20 @@ plots <- lapply(c("shannon", "faith"),
 # combine plots with patchwork
 plots[[1]] + plots[[2]]
 ```
-The analogous output in the form of a violin plot is obtained in chapter \@ref(faith-diversity). In addition, box plots that group samples according to certain information, such as origin, sex, age and health condition, can be labeled with p-values for significant differences with the package `ggsignif` package, as shown in chapter \@ref(estimate-diversity).
+
+The analogous output in the form of a violin plot is obtained in chapter \@ref(faith-diversity). In addition, box plots that group samples according to certain information, such as origin, sex, age and health condition, can be labeled with p-values for significant differences with the package _ggsignif_ package, as shown in chapter \@ref(estimate-diversity).
 
 ### Beta diversity with Shepard and coordination plots
 
-The `scater` package offers the general function `plotReducedDim`. In its basic form, it takes a `TSE` object and the results on sample similarity stored in the same object, which can be evaluated with the following coordination methods:
+The _scater_ package offers the general function `plotReducedDim`. In its basic form, it takes a `TSE` object and the results on sample similarity stored in the same object, which can be evaluated with the following coordination methods:
 
 * `runMDS`
 * `runNMDS`
 * `runPCA`
 * `runTSNE`
 * `runUMAP`
+
+Since these clustering techniques allow for multiple coordinates or components, **coordination plots** can also span multiple dimensions, which is explained in chapter \@ref{extras}.
 
 ```{r}
 # perform NMDS coordination method
@@ -190,7 +187,7 @@ tse <- runMDS(tse,
 plotReducedDim(tse, "MDS", ncomponents = c(1:3), colour_by = "faith")
 ```
 
-Similarly to iterating `plotColData` over indices of alpha diversity, `lapply` can be used in combination with `patchwork` to recursively apply `plotReducedDim` and visually compare results among various coordination methods.
+Similarly to iterating `plotColData` over indices of alpha diversity, `lapply` can be used in combination with _patchwork_ to recursively apply `plotReducedDim` and visually compare results among various coordination methods.
 
 ```{r}
 # generate plots for MDS and NMDS methods
@@ -204,13 +201,13 @@ plots[[1]] + plots[[2]] +
   plot_layout(guides = "collect")
 ```
 
-For similar examples, readers are referred to chapter \@ref(community-similarity). Further material on the graphic capabilities of `patchwork` is available in its [official package tutorial](https://patchwork.data-imaginist.com/articles/patchwork.html).
+For similar examples, readers are referred to chapter \@ref(community-similarity). Further material on the graphic capabilities of _patchwork_ is available in its [official package tutorial](https://patchwork.data-imaginist.com/articles/patchwork.html).
 
 ## Statistical analysis
 
 ### community composition, biclustering and multi-assay analysis with heat maps
 
-As described in chapter \@ref(visual-composition), bar plots and heat maps can offer a useful insight into the composition of a community. Simple methods involve the functions `plotAbundance` and `geom_tile` in combination with `scale_fill_gradientn` from the packages `miaViz` and `ggplot2`, respectively.
+As described in chapter \@ref(visual-composition), bar plots and heat maps can offer a useful insight into the composition of a community. Simple methods involve the functions `plotAbundance` and `geom_tile` in combination with `scale_fill_gradientn` from the packages _miaViz_ and _ggplot2_, respectively.
 
 For instance, below the composition of multiple samples (x axis) is reported in terms of relative abundances (y axis) for the top 10 taxa at the Order rank. Bar plots and heat maps with analogous information at the Phylum level are available in the aforementioned chapter.
 
@@ -239,9 +236,19 @@ plotAbundance(tse_order,
               order_sample_by = "Clostridiales")
 ```
 
-For more sophisticated visualizations than those produced with `plotAbundance` and `ggplot2`, the packages `pheatmap` and `sechm` provide methods to include feature and sample clusters in a heat map, along with further functionality.
+For more sophisticated visualizations than those produced with `plotAbundance` and _ggplot2_, the packages _pheatmap_ and _sechm_ provide methods to include feature and sample clusters in a heat map, along with further functionality.
 
 ```{r pheatmap1}
+# Agglomerate tse by phylum
+tse_phylum <- agglomerateByRank(tse,
+                                rank = "Phylum",
+                                onRankOnly = TRUE)
+# Add clr-transformation on samples
+tse_phylum <- transformSamples(tse_phylum, method = "clr", pseudocount = 1)
+# Add z-transformation on features (taxa)
+tse_phylum <- transformFeatures(tse_phylum, abund_values = "clr", 
+                                method = "z", name = "clr_z")
+
 # Takes subset: only samples from feces, skin, or tongue
 tse_phylum_subset <- tse_phylum[ , colData(tse_phylum)$SampleType %in% c("Feces", "Skin", "Tongue") ]
 
@@ -362,7 +369,7 @@ pheatmap(mat, annotation_row = taxa_clusters,
          color = colors)
 ```
 
-The package `sechm` allows for further visual capabilities and flexibility. In this case, the clustering step is automatically performed by the plotting function and does not need to be executed in advance.
+The package _sechm_ allows for further visual capabilities and flexibility. In this case, the clustering step is automatically performed by the plotting function and does not need to be executed in advance.
 
 ```{r sechm}
 # Stores annotation colros to metadata
@@ -380,7 +387,7 @@ sechm(tse_phylum_subset,
       cluster_cols = TRUE, cluster_rows = TRUE)
 ```
 
-It is also possible to create an analogous heat map by just using the `ggplot2` package. However, a relatively long code is required to generate an identical output.
+It is also possible to create an analogous heat map by just using the _ggplot2_ package. However, a relatively long code is required to generate an identical output.
 
 ```{r more_complex_heatmap}
 # Add feature names to column as a factor
@@ -528,10 +535,20 @@ plot <- taxa_tree +
 plot
 ```
 
-Heat maps find several other applications in biclustering and multi-assay analyses, that are discussed in chapters \@ref(biclustering) and \@ref(multi-assay_analyses), where the packages `cobiclust` and `MOFA2` are of interest.
+Heat maps find several other applications in biclustering and multi-assay analyses, that are discussed in chapters \@ref(biclustering) and \@ref(multi-assay_analyses), where the packages _cobiclust_ and _MOFA2_ are of interest.
+
+### Differential abundance with visual comparisons
+
+The packages _ALDEx2_, _ANCOM-BC_, _Maaslin2_ and _fido_, which were described in chapter \@ref(differential-abundance), support a number of visualization techniques that are specific to each. The **MA**, also called **Bland-Altman**, and the **MW** plots are characteristic of _ALDEx2_ and show difference in abundance among strains as a function of log-ratio abundance and dispersion, respectively. They both present differentially abundant taxa as red dots, uniformly abundant ones as gray dots and rarely abundant ones as black dots. In the case of _ANCOM-BC_ and _Maaslin2_, the analysis returns several **box plots** of the top differentially abundant experimental and control samples. Finally, the tree-based model produced by _fido_ measures the effect of each parameter in terms of its predicted influence on the variance of the selected variable.
+
+|        | _ALDEx2_         | _ANCOM-BC_  | _Maaslin2_   | _fido_                |
+|:------:|:----------------:|:-----------:|:------------:|:---------------------:|
+| method | `aldex.plot`     | `ancombc`   | `Maaslin2`   | `pibble`, `plot`      |
+| plots  | MA and MW plot   | box plot    | box plot     | effect plot           |
+
 
 ## Session Info {-}
 
-```{r sessionInfo, echo=FALSE, results='asis'}
+```{r sessionInfo, echo = FALSE, results = "asis"}
 #prettySessionInfo()
 ```
